Add Bearer token authentication to API

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,10 @@
 PORT=3000
 NODE_ENV=development
 
+# API Security (Optional - if not set, API runs without authentication)
+# Generate a secure token: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+API_TOKEN=your_secure_token_here
+
 # AI Provider API Keys
 CEREBRAS_API_KEY=your_cerebras_api_key_here
 GROQ_API_KEY=your_groq_api_key_here
