--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
     "axios": "^1.6.5",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
-    "cors": "^2.8.5"
+    "winston": "^3.19.0"
   },
   "engines": {
     "node": ">=18.0.0"
